<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ui.menu.MenuGameActivity">

    <TextView
        android:id="@+id/tv_title_menu_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        app:layout_constraintVertical_bias="0.1"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/text_tiltle_menu_game"
        android:textSize="23sp"/>

    <ImageView
        android:id="@+id/iv_vs_player"
        android:layout_width="@dimen/_160sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_landing_page1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_menu_game"/>

    <TextView
        android:id="@+id/tv_text_menu_vs_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/placeholder_text_menu_vs_player"
        android:textColor="@color/black"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_vs_player" />
    <ImageView
        android:id="@+id/iv_vs_com"
        android:layout_width="@dimen/_160sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_landing_page2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_text_menu_vs_player"/>

    <TextView
        android:id="@+id/tv_text_menu_vs_com"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/placeholder_text_menu_vs_com"
        android:textColor="@color/black"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_vs_com" />


</androidx.constraintlayout.widget.ConstraintLayout>